eks-aggregator/http-ingress.yaml
# Temporary resource until https://github.com/vectordotdev/helm-charts/issues/52
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vector
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/healthcheck-port: '8686'
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8080}]'
    alb.ingress.kubernetes.io/target-group-attributes: load_balancing.algorithm.type=least_outstanding_requests
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: internal-k8s-vector-vector-e67b4af534-965797666.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vector
                port:
                  name: datadog-agents
